Added browserlist back

--- a/package.json
+++ b/package.json
@@ -18,5 +18,17 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "sass": "^1.54.7"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
